--- a/src/scss/tabs/_tabs.scss
+++ b/src/scss/tabs/_tabs.scss
@@ -29,6 +29,14 @@
 	display: block;
 	width: 100%;
 	border-bottom: solid 1px transparent;
+	&:after {
+	  content: '';
+	  display: block;
+	  position: absolute;
+	  bottom: 0;
+	  width: 100%;
+	  height: 1px;
+	}
   }
 }
 // Small Screen CSS
